--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -102,6 +102,20 @@ services:
       start_period: 5s
     restart: always
 
+  warehouse:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: warehouse
+      MYSQL_DATABASE: warehouse
+      MYSQL_USER: warehouse
+      MYSQL_PASSWORD: warehouse
+      POSTGRES_DB: warehouse
+    volumes:
+      - warehouse_db:/var/lib/postgresql/data
+    restart: always
+    ports:
+      - 3306:3306
+
   redis:
     # Redis is limited to 7.2-bookworm due to licencing change
     # https://redis.io/blog/redis-adopts-dual-source-available-licensing/
@@ -287,3 +301,4 @@ services:
 
 volumes:
   postgres-db-volume:
+  warehouse_db:
